--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
             >Web<span class="logo-link-header">Studio</span></a
           >
           <ul class="menu list">
-            <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
+            <li class="menu-item">
+              <a class="menu-link link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address>
@@ -43,7 +47,9 @@
               >
             </li>
             <li class="address-menu-item">
-              <a class="address-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="address-menu-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -61,31 +67,51 @@
           <h2 class="sect-title" hidden></h2>
           <ul class="list-studio-sect-one list">
             <li class="card-studio-sect-one">
+              <div class="svg-studio-sect-one">
+                <svg class="sub-svg-studio-sect-one">
+                  <use href="./images/icons.svg#sect-one-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Strategy</h3>
               <p class="paragraph">
-                Our goal is to identify the business problem to walk away with the perfect and
-                creative solution.
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
               </p>
             </li>
             <li class="card-studio-sect-one">
+              <div class="svg-studio-sect-one">
+                <svg class="sub-svg-studio-sect-one">
+                  <use href="./images/icons.svg#sect-one-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Punctuality</h3>
               <p class="paragraph">
-                Bring the key message to the brand's audience for the best price within the shortest
-                possible time.
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
               </p>
             </li>
             <li class="card-studio-sect-one">
+              <div class="svg-studio-sect-one">
+                <svg class="sub-svg-studio-sect-one">
+                  <use href="./images/icons.svg#sect-one-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Diligence</h3>
               <p class="paragraph">
-                Research and confirm brands that present the strongest digital growth opportunities
-                and minimize risk.
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
               </p>
             </li>
             <li class="card-studio-sect-one">
+              <div class="svg-studio-sect-one">
+                <svg class="sub-svg-studio-sect-one">
+                  <use href="./images/icons.svg#sect-one-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Technologies</h3>
               <p class="paragraph">
-                Design practice focused on digital experiences. We bring forth a deep passion for
-                problem-solving.
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
               </p>
             </li>
           </ul>
@@ -96,10 +122,20 @@
           <h2 class="sect-title">What are we doing</h2>
           <ul class="list-studio-sect-two list">
             <li class="card-studio-sect-two">
-              <img src="./images/img1.jpg" alt="monitor and website" width="360" height="300" />
+              <img
+                src="./images/img1.jpg"
+                alt="monitor and website"
+                width="360"
+                height="300"
+              />
             </li>
             <li class="card-studio-sect-two">
-              <img src="./images/img2.jpg" alt="mobile app menu" width="360" height="300" />
+              <img
+                src="./images/img2.jpg"
+                alt="mobile app menu"
+                width="360"
+                height="300"
+              />
             </li>
             <li class="card-studio-sect-two">
               <img
@@ -117,48 +153,248 @@
           <h2 class="sect-title">Our Team</h2>
           <ul class="list-studio-sect-three list">
             <li class="card-studio-sect-three">
-              <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <div class="content-studio-sect-three">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="paragraph">Product Designer</p>
+                                <ul class="card-list-soc list">
+                  <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-instagram"></use>
+                      </svg>
+                    </li>
+                    </a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-twitter"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-facebook"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-linkedin"></use>
+                      </svg>
+                    </li></a>
+                </ul>
               </div>
             </li>
             <li class="card-studio-sect-three">
-              <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
               <div class="content-studio-sect-three">
                 <h3 class="title">Tom Ford</h3>
                 <p class="paragraph">Frontend Developer</p>
+                                <ul class="card-list-soc list">
+                  <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-instagram"></use>
+                      </svg>
+                    </li>
+                    </a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-twitter"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-facebook"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-linkedin"></use>
+                      </svg>
+                    </li></a>
+                </ul>
               </div>
             </li>
             <li class="card-studio-sect-three">
-              <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
 
               <div class="content-studio-sect-three">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="paragraph">Marketing</p>
+                                <ul class="card-list-soc list">
+                  <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-instagram"></use>
+                      </svg>
+                    </li>
+                    </a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-twitter"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-facebook"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-linkedin"></use>
+                      </svg>
+                    </li></a>
+                </ul>
               </div>
             </li>
             <li class="card-studio-sect-three">
-              <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
               <div class="content-studio-sect-three">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="paragraph">UI Designer</p>
+                <ul class="card-list-soc list">
+                  <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-instagram"></use>
+                      </svg>
+                    </li>
+                    </a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-twitter"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-facebook"></use>
+                      </svg>
+                    </li></a>
+                      <a href="" class="card-link-soc">
+                    <li class="card-list-soc-item">
+                      <svg class="card-list-icon">
+                        <use href="./images/icons.svg#logo-linkedin"></use>
+                      </svg>
+                    </li></a>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="customers section">
+        <div class="container">
+        <h2 class="sect-title">Customers</h2>
+        <ul class="customers-list list">
+          <li class="customers-item">
+            <svg class="customers-svg">
+              <use href="./images/icons.svg#client-logo-1"></use>
+            </svg>
+          </li>
+          <li class="customers-item">
+            <svg class="customers-svg">
+              <use href="./images/icons.svg#client-logo-2"></use>
+            </svg>
+          </li>
+          <li class="customers-item">
+            <svg class="customers-svg">
+              <use href="./images/icons.svg#client-logo-3"></use>
+            </svg>
+          </li>
+          <li class="customers-item">
+            <svg class="customers-svg">
+              <use href="./images/icons.svg#client-logo-4"></use>
+            </svg>
+          </li class="customers-item">
+          <li class="customers-item">
+            <svg class="customers-svg">
+              <use href="./images/icons.svg#client-logo-5"></use>
+            </svg>
+          </li class="customers-item">
+          <li class="customers-item">
+            <svg class="customers-svg">
+              <use href="./images/icons.svg#client-logo-6"></use>
+            </svg>
+          </li>
+        </ul>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
+      <div class="footer-container container">
+        <div class="footer-content">
         <a class="logo-link link" href="./index.html"
           >Web<span class="logo-link-footer">Studio</span></a
         >
-        <p class="footer-paragraph">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
+        <p class="footer-content-paragraph">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
+</div>
+      <div class="footer-contacts">
+        <p class="footer-contacts-paragraph">Social media</p>
+        <ul class="footer-list list">
+          <a href="" class="footer-link link">
+            <li class="footer-contacts-item">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#logo-instagram"></use>
+              </svg>
+            </li>
+          </a>
+          <a href="" class="footer-link link">
+            <li class="footer-contacts-item">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#logo-twitter"></use>
+              </svg>
+            </li>
+          </a>
+          <a href="" class="footer-link link">
+            <li class="footer-contacts-item">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#logo-facebook"></use>
+              </svg>
+            </li>
+          </a>
+          <a href="" class="footer-link link">
+            <li class="footer-contacts-item">
+              <svg class="footer-icon">
+                <use href="./images/icons.svg#logo-linkedin"></use>
+              </svg>
+            </li>
+          </a>
+        </ul>
       </div>
+            </div>
     </footer>
   </body>
 </html>
