--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,15 @@
             >Web<span class="logo-link-header">Studio</span></a
           >
           <ul class="menu list">
-            <li class="menu-item"><a class="menu-link link" href="./index.html">Studio</a></li>
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Studio</a>
+            </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
+            <li class="menu-item">
+              <a class="menu-link link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address>
@@ -43,7 +47,9 @@
               >
             </li>
             <li class="address-menu-item">
-              <a class="address-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="address-menu-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
@@ -76,7 +82,7 @@
                 <article class="portfolio-item-card">
                   <div class="portfolio-item-thumb">
                     <img
-                      src="./images/app-banking.jpg"
+                      src="./images/app1-banking.jpg"
                       alt="app banking"
                       width="360"
                       height="300"
@@ -89,7 +95,6 @@
                 </article>
               </a>
             </li>
-
             <li class="portfolio-item">
               <a href="" class="link">
                 <article class="portfolio-item-card">
@@ -227,7 +232,12 @@
               <a href="" class="link"
                 ><article class="portfolio-item-card">
                   <div class="portfolio-item-thumb">
-                    <img src="./images/website-coffee.jpg" alt="coffee" width="360" height="300" />
+                    <img
+                      src="./images/website-coffee.jpg"
+                      alt="coffee"
+                      width="360"
+                      height="300"
+                    />
                   </div>
                   <div class="portfolio-item-content">
                     <h2 class="title">Fresh Coffee</h2>
@@ -241,14 +251,49 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo-link link" href="./index.html"
-          >Web<span class="logo-link-footer">Studio</span></a
-        >
-        <p class="footer-paragraph">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="footer-content">
+          <a class="logo-link link" href="./index.html"
+            >Web<span class="logo-link-footer">Studio</span></a
+          >
+          <p class="footer-content-paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-contacts">
+          <p class="footer-contacts-paragraph">Social media</p>
+          <ul class="footer-list list">
+            <a href="" class="footer-link link">
+              <li class="footer-contacts-item">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-instagram"></use>
+                </svg>
+              </li>
+            </a>
+            <a href="" class="footer-link link">
+              <li class="footer-contacts-item">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-twitter"></use>
+                </svg>
+              </li>
+            </a>
+            <a href="" class="footer-link link">
+              <li class="footer-contacts-item">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-facebook"></use>
+                </svg>
+              </li>
+            </a>
+            <a href="" class="footer-link link">
+              <li class="footer-contacts-item">
+                <svg class="footer-icon">
+                  <use href="./images/icons.svg#logo-linkedin"></use>
+                </svg>
+              </li>
+            </a>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
