--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <div class="content-studio-sect-three">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="paragraph">Product Designer</p>
-                                <ul class="card-list-soc list">
+                <ul class="card-list-soc list">
                   <a href="" class="card-link-soc">
                     <li class="card-list-soc-item">
                       <svg class="card-list-icon">
@@ -183,33 +183,33 @@
                       </svg>
                     </li></a>
                       <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
-                      <svg class="card-list-icon">
-                        <use href="./images/icons.svg#logo-linkedin"></use>
-                      </svg>
-                    </li></a>
-                </ul>
-              </div>
-            </li>
-            <li class="card-studio-sect-three">
-              <img
+                        <li class="card-list-soc-item">
+                          <svg class="card-list-icon">
+                            <use href="./images/icons.svg#logo-linkedin"></use>
+                          </svg>
+                        </li>
+                      </a>
+                    </ul>
+                  </div>
+                </li>
+                <li class="card-studio-sect-three">
+                   <img
                 src="./images/tom-ford.jpg"
                 alt="Tom Ford"
                 width="264"
-                height="260"
-              />
-              <div class="content-studio-sect-three">
-                <h3 class="title">Tom Ford</h3>
-                <p class="paragraph">Frontend Developer</p>
-                                <ul class="card-list-soc list">
-                  <a href="" class="card-link-soc">
-                    <li class="card-list-soc-item">
-                      <svg class="card-list-icon">
-                        <use href="./images/icons.svg#logo-instagram"></use>
-                      </svg>
-                    </li>
+                height="260"/>
+                <div class="content-studio-sect-three">
+                  <h3 class="title">Tom Ford</h3>
+                  <p class="paragraph">Frontend Developer</p>
+                  <ul class="card-list-soc list">
+                    <a href="" class="card-link-soc">
+                      <li class="card-list-soc-item">
+                        <svg class="card-list-icon">
+                          <use href="./images/icons.svg#logo-instagram"></use>
+                        </svg>
+                      </li>
                     </a>
-                      <a href="" class="card-link-soc">
+                    <a href="" class="card-link-soc">
                     <li class="card-list-soc-item">
                       <svg class="card-list-icon">
                         <use href="./images/icons.svg#logo-twitter"></use>
@@ -241,7 +241,7 @@
               <div class="content-studio-sect-three">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="paragraph">Marketing</p>
-                                <ul class="card-list-soc list">
+                <ul class="card-list-soc list">
                   <a href="" class="card-link-soc">
                     <li class="card-list-soc-item">
                       <svg class="card-list-icon">
@@ -360,7 +360,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-</div>
+      </div>
       <div class="footer-contacts">
         <p class="footer-contacts-paragraph">Social media</p>
         <ul class="footer-list list">
@@ -394,7 +394,7 @@
           </a>
         </ul>
       </div>
-            </div>
+      </div>
     </footer>
   </body>
 </html>
