--- a/portfolio.html
+++ b/portfolio.html
@@ -47,9 +47,7 @@
               >
             </li>
             <li class="address-menu-item">
-              <a class="address-menu-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="address-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -79,172 +77,126 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a href="" class="link">
-                <article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/app1-banking.jpg"
-                      alt="app banking"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Banking App Interface Concept</h2>
-                    <p class="paragraph">App</p>
-                  </div>
-                </article>
+                <img src="./images/app-banking.jpg" alt="app banking" width="360" height="300" />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Banking App Interface Concept</h2>
+                  <p class="paragraph">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/marketing-cashless.jpg"
-                      alt="marketing cashless"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Cashless Payment</h2>
-                    <p class="paragraph">Marketing</p>
-                  </div>
-                </article>
+                <img
+                  src="./images/marketing-cashless.jpg"
+                  alt="marketing cashless"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Cashless Payment</h2>
+                  <p class="paragraph">Marketing</p>
+                </div>
               </a>
             </li>
 
             <li class="portfolio-item">
               <a href="" class="link">
-                <article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/app-meditaion.jpg"
-                      alt="app meditaion"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Meditation App</h2>
-                    <p class="paragraph">App</p>
-                  </div>
-                </article></a
-              >
+                <img
+                  src="./images/app-meditaion.jpg"
+                  alt="app meditaion"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Meditation App</h2>
+                  <p class="paragraph">App</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link"
-                ><article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/marketing-taxi.jpg"
-                      alt="marketing taxi"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Taxi Service</h2>
-                    <p class="paragraph">Marketing</p>
-                  </div>
-                </article></a
-              >
+              <a href="" class="link">
+                <img
+                  src="./images/marketing-taxi.jpg"
+                  alt="marketing taxi"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Taxi Service</h2>
+                  <p class="paragraph">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link"
-                ><article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/design-screen.jpg"
-                      alt="design screen"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Screen Illustrations</h2>
-                    <p class="paragraph">Design</p>
-                  </div>
-                </article></a
-              >
+              <a href="" class="link">
+                <img
+                  src="./images/design-screen.jpg"
+                  alt="design screen"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Screen Illustrations</h2>
+                  <p class="paragraph">Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link"
-                ><article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/marketing-courses.jpg"
-                      alt="marketing courses"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Online Courses</h2>
-                    <p class="paragraph">Marketing</p>
-                  </div>
-                </article></a
-              >
+              <a href="" class="link">
+                <img
+                  src="./images/marketing-courses.jpg"
+                  alt="marketing courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Online Courses</h2>
+                  <p class="paragraph">Marketing</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link"
-                ><article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/design-instagram.jpg"
-                      alt="design instagram"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Instagram Stories Concept</h2>
-                    <p class="paragraph">Design</p>
-                  </div>
-                </article></a
-              >
+              <a href="" class="link">
+                <img
+                  src="./images/design-instagram.jpg"
+                  alt="design instagram"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Instagram Stories Concept</h2>
+                  <p class="paragraph">Design</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link"
-                ><article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/website-organicfood.jpg"
-                      alt="organic food"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Organic Food</h2>
-                    <p class="paragraph">Web Site</p>
-                    <p></p>
-                  </div></article
-              ></a>
+              <a href="" class="link">
+                <img
+                  src="./images/website-organicfood.jpg"
+                  alt="organic food"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Organic Food</h2>
+                  <p class="paragraph">Web Site</p>
+                </div>
+              </a>
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="link"
-                ><article class="portfolio-item-card">
-                  <div class="portfolio-item-thumb">
-                    <img
-                      src="./images/website-coffee.jpg"
-                      alt="coffee"
-                      width="360"
-                      height="300"
-                    />
-                  </div>
-                  <div class="portfolio-item-content">
-                    <h2 class="title">Fresh Coffee</h2>
-                    <p class="paragraph">Web Site</p>
-                  </div>
-                </article></a
-              >
+              <a href="" class="link">
+                <img src="./images/website-coffee.jpg" alt="coffee" width="360" height="300" />
+                <div class="portfolio-item-content">
+                  <h2 class="title">Fresh Coffee</h2>
+                  <p class="paragraph">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -257,8 +209,8 @@
             >Web<span class="logo-link-footer">Studio</span></a
           >
           <p class="footer-content-paragraph">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
           </p>
         </div>
         <div class="footer-contacts">
